# portfolio_monitor

./: .gitignore  CLAUDE.md  Makefile  README.md  SOURCE_MAP.md  config.yaml  pyproject.toml  pyrightconfig.json  pytest.ini
config/: config.yaml
config/watchlists/taylor/: energy.yaml  tech_stocks.yaml
docs/: detectors.md
docs/api/: v1.md
docs/examples/: example_portfolio.yaml
frontend/: control-panel.html  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: index.css
frontend/src/control-panel/: App.tsx
frontend/src/control-panel/api/: client.ts
frontend/src/control-panel/pages/: ControlPanel.tsx
frontend/src/dashboard/: App.tsx
frontend/src/dashboard/api/: client.ts  ws.ts
frontend/src/dashboard/components/: AlertBell.tsx  AssetMenu.tsx  Chart.tsx  ChartControls.tsx  DataTable.tsx  Overview.tsx  OverviewPane.tsx  PortfolioDetail.tsx  PortfolioDetailPane.tsx  PortfolioPerformance.tsx  PortfolioPerformanceChart.tsx  PortfolioPerformancePane.tsx  Sparkline.tsx  VolumeBars.tsx  WatchlistView.tsx  WatchlistsPane.tsx
frontend/src/dashboard/lib/: assetFormat.ts  chartSettings.ts  formatters.ts  perfUtils.ts
frontend/src/dashboard/pages/: Dashboard.tsx  Login.tsx  Settings.tsx
frontend/src/pages/: Login.tsx
scripts/: demo.py  plot_symbol.py  test_matrix.py  test_polygon_prices.py
src/nexus_portfolio_monitor/config/: __init__.py  config.py
src/nexus_portfolio_monitor/core/: config.py  currency.py  datetime.py
src/nexus_portfolio_monitor/data/: aggregate_cache.py  provider.py
src/nexus_portfolio_monitor/detectors/: __init__.py  average_true_range_move.py  base.py  engine.py  moving_average_deviation.py  percent_change.py  volume_spike.py  zscore_return.py  zscore_volume.py
src/nexus_portfolio_monitor/portfolio/: __init__.py  loader.py  portfolio.py
src/nexus_portfolio_monitor/service/: alerts.py  main.py  monitor.py  types.py
src/portfolio_monitor/account/: __init__.py  store.py
src/portfolio_monitor/account/models/: __init__.py  account.py
src/portfolio_monitor/cli/: display.py  main.py  request.py  utils.py
src/portfolio_monitor/cli/commands/: alerts.py  login.py  portfolio.py  prices.py  watchlist.py
src/portfolio_monitor/config/: __init__.py  config.py
src/portfolio_monitor/core/: __init__.py  currency.py  datetime.py  permissions.py
src/portfolio_monitor/core/events/: bus.py
src/portfolio_monitor/data/: __init__.py  aggregate_cache.py  events.py  market_info.py  polygon.py  provider.py  timespan.py
src/portfolio_monitor/data/database/: __init__.py  accounts.py  alerts.py  core.py  performance.py  portfolios.py  sessions.py  watchlists.py
src/portfolio_monitor/detectors/: __init__.py  average_true_range_move.py  base.py  engine.py  events.py  moving_average_deviation.py  percent_change.py  price_value.py  registry.py  service.py  volume_spike.py  zscore_return.py  zscore_volume.py
src/portfolio_monitor/portfolio/: __init__.py  events.py  loader.py  portfolio.py  service.py
src/portfolio_monitor/portfolio/models/: __init__.py  _helpers.py  asset.py  lot.py  portfolio.py
src/portfolio_monitor/service/: alert_router.py  context.py  main.py  monitor.py  performance.py  types.py  vite.py
src/portfolio_monitor/service/alerts/: __init__.py  buffer.py  channel_pool.py  delivery.py  events.py  models.py  router.py  rule_events.py  user_alert_manager.py
src/portfolio_monitor/service/api/: app.py  auth.py  middleware.py
src/portfolio_monitor/service/dashboard/: app.py
src/portfolio_monitor/service/dev/: __init__.py  config.py  data_provider.py  price_generator.py  seed_price_provider.py  service.py  synthetic_source.py
src/portfolio_monitor/service/event_hooks/: __init__.py  (+2 more)
src/portfolio_monitor/session/: __init__.py  store.py
src/portfolio_monitor/utils/: __init__.py  logfire.py  time.py  trace.py
src/portfolio_monitor/watchlist/: __init__.py  events.py  service.py
tests/: __init__.py  conftest.py  test_alert_models.py  test_currency.py  test_events.py  test_integration_event_chain.py  test_market_info.py  test_permissions.py  test_portfolio.py
tests/detectors/: test_average_true_range_move.py  test_moving_average_deviation.py  test_percent_change.py  test_price_detector.py  test_volume_spike.py  test_zscore_return.py  test_zscore_volume.py
(+61 files in other folders)
