[project]
name = "portfolio_monitor"
dynamic = ["version"]
description = "A portfolio monitoring application"
readme = "README.md"
authors = [
    {name = "Martin Smith", email = "msmith@bitmonster.org"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "asyncio>=3.4.3",
    "logfire>=4.0.0",
    "omegaconf>=2.3.0",
    "polygon-api-client>=1.15.3",
    "sortedcontainers>=2.4.0",
    "appconf @ git+https://github.com/madsmith/appconf@v1.2.0",
    "numpy>=2.3.2",
]

[project.scripts]
portfolio-monitor = "portfolio_monitor.service.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "portfolio_monitor.__version__"}

[tool.setuptools.package-data]
portfolio_monitor = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
