[project]
name = "portfolio_monitor"
dynamic = ["version"]
description = "A portfolio monitoring application"
readme = "README.md"
authors = [
    {name = "Martin Smith", email = "msmith@bitmonster.org"}
]
license = {text = "MIT"}
# Python 3.14 breaks polygon-api-client: PEP 749 deferred annotations
# cause KeyError on cls.__dict__["__annotations__"] in modelclass decorator.
requires-python = ">=3.12,<3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "asyncio>=3.4.3",
    "logfire>=4.0.0",
    "omegaconf>=2.3.0",
    "polygon-api-client>=1.15.3",
    "sortedcontainers>=2.4.0",
    "appconf @ git+https://github.com/madsmith/appconf@v1.4.1",
    "numpy>=2.3.2",
    "starlette>=0.45.0",
    "uvicorn[standard]>=0.34.0",
    "jinja2>=3.1.0",
    "itsdangerous>=2.1.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "websockets>=13.0",
    "cryptography>=44.0.0",
    "pydantic>=2.12.5",
    "opentelemetry-instrumentation-urllib3>=0.57b0",
]

[project.scripts]
portfolio-monitor = "portfolio_monitor.service.main:main"
portfolio-manager = "portfolio_monitor.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=0.25.0",
    "matplotlib>=3.9.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "portfolio_monitor.__version__"}

[tool.setuptools.package-data]
portfolio_monitor = ["py.typed", "service/dev/control_panel/templates/*.html"]

[tool.setuptools.packages.find]
where = ["src"]
